--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:900');
 
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Source+Sans+Pro:300');
+
+
 body{ 
-	background-color: #CFE0C3;
-	color: blue; 
+	background-color: #9DA39A;
 	font-size: 25px; 
 	font-family: Helvetica;
 	text-align: center;
 	margin: 0;
 }
 
-#banner {
-
-	background-image: url("https://picsum.photos/200/300/?random");
-	background-size: cover;
-	padding: 150px;
-	text-shadow: 3px 3px 10px grey;
+h1	{
+	font-family: Montserrat; sans-serif;
+	color: #DB2955;
+	font-size: 24px;
+	
 }
 
-#inner_banner 
+h2 {
+	font-family: 'Source Sans Pro', sans-serif;
+	color: #9DA39A;
+	font-size: 12px;
+	font-weight: light; 
+}
 
+#banner {
+
+	padding: 150px;
+	text-shadow: 3px 3px 10px white;
+	text-align: center;
+}
 
 .social:hover {
 	color: white;
@@ -30,23 +43,12 @@ body{
 	border: dashed;
 	border-radius: 50px;
 	border-color: grey;
-	margin: 10px;
+	margin: 5px;
 	text-align: center; 
 
-
 }
 
-h1	{
-	font-family: Montserrat; sans-serif;
-	color: #DB2955;
-	
-}
 
-h2 {
-	font-family: Open sans condensed;
-	color: #9DA39A;
-	font-size: 24px;
-}
 
 a{
 	color: purple;
@@ -57,6 +59,4 @@ a:hover {
 	color: #FFF9A5;
 	font-size: 30px;
 }
-div {
 
-}
